<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Class Room Pro</string>
    <string name="title_activity_main">Class Room</string>
    <string name="info" tools:ignore="MissingTranslation">
  Power by Tân Nhật CMS Projects \nDev: mrkiet.edu@gmail.com \n Phiên bản: %1$s</string>
    <string name="title_info">Thông tin về ứng dụng</string>
  <string name="add_timeTable">Thêm</string>
    <string name="tkb">Thời khoá biểu</string>
    <string name="updating">áp dụng học online từ ngày 6/9/2021</string>
    <string name="info_title">Thông Tin Ứng Dụng</string>
    <string name="title_activity_webview">Trình Duyệt Web</string>
    <string name="toolbar_toast_text">Toolbar Clicked with URL: %s</string>
    <string name="unknown_toast_text">Unknown Action Clicked with URL: %s</string>
    <string name="action_button_toast_text">Action Button Clicked with URL: %s</string>
    <string name="menu_item_toast_text">Menu Item Clicked with URL: %s</string>
    <string name="physics">Vật Lý</string>
    <string name="algorithm">Đại số và Giải tích</string>
    <string name="geometry">Toán Hình học</string>
    <string name="literature1">Ngữ Văn Tập 1</string>
    <string name="literature2">Ngữ Văn tập 2</string>
    <string name="chemistry">Hoá học</string>
    <string name="civic">Giáo Dục Công Dân</string>
    <string name="geography">Địa lý</string>
    <string name="history">Lịch sử</string>
    <string name="title_activity_pdfview">Trình xem PDF</string>
    <string name="physics_formula">Công thức vật lý</string>
    <string name="english">Tiếng Anh</string>
    <string name="biological">Sinh Học</string>
    <string name="book">Sách giáo khoa</string>
    <string name="contact">Danh Bạ Giáo Viên</string>
    <string name="thoikhoabieu">Thời Khóa Biểu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Trang Chủ</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="class11b">Lớp 11B</string>
  <string name="year">2021–2022</string>
  <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        FCM registration token to logcat.</string>
  <string name="subscribe_to_weather">Subscribe To Weather</string>
  <string name="log_token">Log Token</string>

  <string name="msg_subscribed">Subscribed to weather topic</string>
  <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>

  <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
  <!--
      This is the name that users will see when interacting with this channel.
      It should describe the category of notifications that will be sent through this channel
   -->
  <!-- [START fcm_default_icon_string] -->
  <string name="default_notification_channel_name" translatable="true">Weather</string>
  <!-- [END fcm_default_icon_string] -->
  <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
  <string name="fcm_message">FCM Message</string>
    <string name="name">Tên</string>
  <string name="teacher">giáo viên</string>
  <string name="number_phone">Số diện thoại</string>
  <string name="title_update">Cập nhật ứng dụng</string>
  <string name="msg_update">Đang tải cập nhật ứng dụng,xin vui lòng chờ!</string>
    <string name="mathoutline1">Đề cương toán HKI</string>
    <string name="title_dpf_page" tools:ignore="MissingTranslation">%s Trang %s / %s</string>
    <string name="title_dpf_downloading" tools:ignore="ExtraTranslation">Đang tải %s %s </string>


  <string name="app_quizizz">Quizizz Pro</string>
  <string name="open_quizizz">Open Quizizz</string>
  <string name="ok">OK</string>
  <string name="nh_p_m_tr_ch_i">Nhập mã trò chơi</string>
  <string name="action_filter">Filter...</string>
  <string name="filter_hint">package/action</string>
  <string name="quizizz">Quizizz</string>
    <string name="search">search</string>
  <string name="copy">copy</string>
</resources>