<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <include
        android:id="@+id/app_bar_main"
        layout="@layout/app_bar_quizizz"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="vertical"
                android:paddingTop="50dp"

                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/side_nav_bar"
                android:theme="@style/ThemeOverlay.AppCompat.Dark">
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent">
                <EditText
                    android:id="@+id/editTextCode"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:hint="@string/nh_p_m_tr_ch_i"
                    android:inputType="number"
                    android:scrollbars="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/contained_button"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ok"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:paddingLeft="@dimen/activity_vertical_margin"
                        app:strokeColor="@color/colorPrimary" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/contained_button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:paddingLeft="@dimen/activity_vertical_margin"
                        android:text="@string/quizizz"
                        app:strokeColor="@color/colorPrimary" />
                </LinearLayout>
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    tools:ignore="MissingConstraints">
                    <androidx.appcompat.widget.SearchView
                        app:iconifiedByDefault="false"
                        app:submitBackground="@null"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/searchViewN"
                        app:queryBackground="@null"
                        android:background="@drawable/shapebgsearch"
                        tools:ignore="MissingConstraints">
                    </androidx.appcompat.widget.SearchView>
                </LinearLayout>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    tools:ignore="MissingConstraints,UselessParent">
                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints" />
                    <TextView
                        android:id="@+id/text_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/progressBar"
                        android:layout_alignTop="@id/progressBar"
                        android:layout_alignEnd="@id/progressBar"
                        android:layout_alignBottom="@id/progressBar"
                        android:gravity="center_horizontal"
                        android:text=""
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        tools:ignore="MissingConstraints" />
                <cms.tannhat.alphabetsindexfastscrollrecycler.IndexFastScrollRecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/rv" />
                </LinearLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>